--- a/css/tefa.css
+++ b/css/tefa.css
@@ -137,7 +137,7 @@ header nav .form i {
 .landing {
     min-height: 100vh;
     background-color: #021324;
-    background-image: url("../imge/smartphone-neon-small-round-dots-600nw-2438970715.webp");
+    background-image: url("../imge/smartphone-neon-small-round-dots-600nw-2438970715\ -\ Copy.webp");
     background-size: cover;
     position: relative;
 }
